Finalização do Dialog de cadastro das patologias dos familiares do paciente

--- a/src/app/atendimento-paciente/consulta/consulta.component.html
+++ b/src/app/atendimento-paciente/consulta/consulta.component.html
@@ -73,8 +73,9 @@
                 </div>
         
                 <div class="col-12 col-md-6">
-                    <app-fieldset-historico-patologia-familiares [paciente]="paciente"
-                        [informacoesPreviasHistoricosFamiliaresPorData]="historicosPaciente.informacoesPreviasHistoricosPatologiaFamiliaresPorData">
+                    <app-fieldset-historico-patologia-familiares [paciente]="paciente" [exibirBotaoCadastrarHistorico]="true"
+                        [informacoesPreviasHistoricosFamiliaresPorData]="historicosPaciente.informacoesPreviasHistoricosPatologiaFamiliaresPorData"
+                        [patologias]="informacoesCadastroConsulta.patologiasFamiliares">
                     </app-fieldset-historico-patologia-familiares>
                 </div>
             </div>
