--- a/src/app/paciente-historicos/historico-patologia-familiares-por-data/fieldset-historico-patologia-familiares/fieldset-historico-patologia-familiares.component.css
+++ b/src/app/paciente-historicos/historico-patologia-familiares-por-data/fieldset-historico-patologia-familiares/fieldset-historico-patologia-familiares.component.css
@@ -7,3 +7,9 @@
     border: 2px solid rgba(209, 209, 209, 0.774);
     border-radius: 2px;
 }
+
+.mensagem-input-patologia {
+    margin-top: -15px;
+    margin-bottom: 3px;
+    font-size: 13px;
+}
