--- a/src/app/paciente-historicos/historico-social/fieldset-historico-social/fieldset-historico-social.component.html
+++ b/src/app/paciente-historicos/historico-social/fieldset-historico-social/fieldset-historico-social.component.html
@@ -97,7 +97,7 @@
     </div>
 </p-fieldset>
 
-<!-- Dialog Histórico Social selecionado -->
+<!-- Dialog cadastro de Histórico Social -->
 <p-dialog [visible]="abrirDialogCadastro" [modal]="true" [resizable]="false" 
     [blockScroll]="true" [draggable]="false" [closable]="false" [style]="{width: '96%'}">
 
@@ -396,7 +396,7 @@
     </p-footer>
 </p-dialog>
 
-<!-- Dialog Histórico Social selecionado -->
+<!-- Dialog informações Histórico Social selecionado -->
 <p-dialog [visible]="abrirDialogInformacoes" [modal]="true" [resizable]="false" 
     [blockScroll]="true" [draggable]="false" [closable]="false" [style]="{width: '96%'}">
 
