--- a/src/app/atendimento-paciente/consulta/consulta.component.html
+++ b/src/app/atendimento-paciente/consulta/consulta.component.html
@@ -88,8 +88,9 @@
                     </app-fieldset-historico-atividade-fisica>
                 </div>
                 <div class="col-12 col-md-6">
-                    <app-fieldset-historico-alimentar [paciente]="paciente"
-                        [informacoesPreviasHistoricosAlimentares]="historicosPaciente.informacoesPreviasHistoricosAlimentares">
+                    <app-fieldset-historico-alimentar [paciente]="paciente" [exibirBotaoCadastrarHistorico]="true"
+                        [informacoesPreviasHistoricosAlimentares]="historicosPaciente.informacoesPreviasHistoricosAlimentares"
+                        [informacoesParaCadastro]="informacoesCadastroConsulta.historicoAlimentar">
                     </app-fieldset-historico-alimentar>
                 </div>
             </div>
