--- a/src/app/paciente-historicos/historico-alimentar/fieldset-historico-alimentar/fieldset-historico-alimentar.component.html
+++ b/src/app/paciente-historicos/historico-alimentar/fieldset-historico-alimentar/fieldset-historico-alimentar.component.html
@@ -354,6 +354,14 @@
                 </div>
             </div>
         </div>
+
+        <div class="row mt-4">
+            <button class="btn btn-info" style="width: 100%;"
+                (click)="abrirDialogSelecaoSuplementosPaciente = true">
+                <i class="fas fa-capsules"></i>
+                Suplementos
+            </button>
+        </div>
     </div>
 
     <p-footer>
@@ -362,8 +370,103 @@
             Voltar
         </button>
 
-        <button class="btn btn-success" [disabled]="processandoOperacao">
+        <button class="btn btn-success" [disabled]="desabilitarBotaoConfirmarCadastroHistoricoAlimentar()"
+            (click)="cadastrarHistoricoAlimentar()">
             <i class="fas " [ngClass]="processandoOperacao ? 'fa-spin fa-circle-notch' : 'fa-check-circle'"></i>
+            Confirmar
+        </button>
+    </p-footer>
+</p-dialog>
+
+<!-- Dialog cadastro de suplementos do paciente -->
+<p-dialog [visible]="abrirDialogSelecaoSuplementosPaciente" [modal]="true" [resizable]="false" 
+    [blockScroll]="true" [draggable]="false" [closable]="false" [style]="{width: '85%'}">
+
+    <p-header>
+        Cadastrar suplementos de <b>{{ paciente.nome }}</b>
+    </p-header>
+
+    <div class="container-fluid">
+        <div class="row mt-4">
+            <div class="col-12">
+                <span class="p-float-label">
+                    <p-multiSelect [options]="suplementosDropdown" [(ngModel)]="suplementosSelecionadosDropdown" optionLabel="label" 
+                        appendTo="body" [filter]="true" emptyFilterMessage="Suplemento não encontrado!"
+                        (ngModelChange)="alteracaoSuplementosSelecionadosParaCadastro()"
+                        [style]="{width: '100%'}" [scrollHeight]="'120px'" [displaySelectedLabel]="false">
+                    </p-multiSelect >
+                    <label for="inputtext">Suplementos</label>
+                </span>
+            </div>
+        </div>
+
+        <div class="row mt-3" [style]="!suplementosSelecionadosDropdown || suplementosSelecionadosDropdown.length < 2 ? 'margin-bottom: 150px' : ''">
+            <div class="borda-table">
+                <p-table [value]="formularioSuplementosSelecionados" [columns]="colunasTabelaCadastroSuplementosPaciente" 
+                    [responsive]="true" class="text-center">
+
+                    <ng-template pTemplate="header" let-colunas>
+                        <tr>
+                            <th *ngFor="let coluna of colunas" [pSortableColumn]="coluna.field" [ngClass]="coluna.style" class="text-center">
+                                {{ coluna.header }}
+                                <p-sortIcon *ngIf="coluna.header ==='Nome'" [field]="coluna.field" 
+                                    ariaLabel="active to sort"
+                                    ariaLabelDesc="Activate to sort in descending order"
+                                    ariaLabelAsc="Activate to sort in ascending order">
+                                </p-sortIcon>
+                            </th>
+                        </tr>
+                    </ng-template>
+
+                    <ng-template pTemplate="body" let-suplemento>
+                        <tr>
+                            <td *ngFor="let coluna of colunasTabelaCadastroSuplementosPaciente" class="text-center">
+                                <span class="ui-column-title text-left"></span>
+
+                                <span *ngIf="coluna.header === 'Nome'">
+                                    {{ suplemento[coluna.field] }}
+                                </span>
+
+                                <span *ngIf="coluna.header === 'Dose'">
+                                    <input type="text" style="width: 90%;" [(ngModel)]="formularioSuplementosSelecionados[formularioSuplementosSelecionados.indexOf(suplemento)].dose" pInputText> 
+                                </span>
+
+                                <span *ngIf="coluna.header === 'Forma de Preparo'">
+                                    <textarea pInputTextarea [rows]="3" [(ngModel)]="formularioSuplementosSelecionados[formularioSuplementosSelecionados.indexOf(suplemento)].formaPreparo" 
+                                        [style]="{width: '100%'}" autoResize="autoResize">
+                                    </textarea>
+                                </span>
+                
+                                <span *ngIf="coluna.header === 'Ações'">
+                                    <button class="btn btn-danger ml-2" pTooltip="Excluir" tooltipPosition="bottom"
+                                        (click)="excluirSuplementoDoPaciente(suplemento)">
+                                        <i class="fas fa-trash-alt"></i>
+                                    </button>
+                                </span>
+                            </td>
+                        </tr>
+                    </ng-template>
+
+                    <ng-template pTemplate="emptymessage" class="text-center" let-suplementos>
+                        <tr>
+                            <td [attr.colspan]="suplementos.length" class="text-center">
+                                Nenhum suplemento selecionado
+                            </td>
+                        </tr>
+                    </ng-template>
+                </p-table>
+            </div>
+        </div>
+    </div>
+
+    <p-footer>
+        <button class="btn btn-danger" (click)="cancelarSuplementosPaciente()">
+            <i class="fas fa-times-circle"></i>
+            Cancelar
+        </button>
+        <button class="btn btn-success" [disabled]="desabilitarBotaoConfirmarSuplementosSelecionadosDoPaciente()"
+            (click)="abrirDialogSelecaoSuplementosPaciente = false">
+            <i class="fas fa-check-circle"></i>
             Confirmar
         </button>
     </p-footer>
