--- a/src/app/atendimento-paciente/consulta/consulta.component.html
+++ b/src/app/atendimento-paciente/consulta/consulta.component.html
@@ -97,8 +97,9 @@
         
             <div class="row">
                 <div class="col-12 col-md-6 mt-3">
-                    <app-historico-questionario-frequencia-alimentar [paciente]="paciente"
-                        [informacoesPreviasQuestionarios]="historicosPaciente.informacoesPreviasQuestionariosFrequenciaAlimentar">
+                    <app-historico-questionario-frequencia-alimentar [paciente]="paciente" [exibirBotaoCadastrarQuestionario]="true"
+                        [informacoesPreviasQuestionarios]="historicosPaciente.informacoesPreviasQuestionariosFrequenciaAlimentar"
+                        [informacoesCadastro]="informacoesCadastroConsulta.questionarioFrequenciaAlimentar">
                     </app-historico-questionario-frequencia-alimentar>
                 </div>
             </div>
