--- a/src/app/paciente-historicos/historico-questionario-frequencia-alimentar/historico-questionario-frequencia-alimentar/historico-questionario-frequencia-alimentar.component.html
+++ b/src/app/paciente-historicos/historico-questionario-frequencia-alimentar/historico-questionario-frequencia-alimentar/historico-questionario-frequencia-alimentar.component.html
@@ -9,7 +9,8 @@
     </p-header>
 
     <app-cadastro-questionario-frequencia-alimentar [exibirBotaoCadastrarQuestionario]="exibirBotaoCadastrarQuestionario"
-        [informacoesCadastro]="informacoesCadastro" [paciente]="paciente">
+        [informacoesCadastro]="informacoesCadastro" [paciente]="paciente"
+        (cadastroQuestionario)="eventoCadastroQuestionario($event)">
     </app-cadastro-questionario-frequencia-alimentar>
 
     <div class="borda-table mt-2">
@@ -158,7 +159,7 @@
             <div *ngIf="questionario.consumoTipoLeite"><b>Consumo leite: </b>{{ questionario.consumoTipoLeite }}</div>
             <div *ngIf="questionario.consumoCarneVermelha"><b>Consumo carne vermelha: </b>{{ questionario.consumoCarneVermelha }}</div>
             <div *ngIf="questionario.consumoFrango"><b>Consumo frango: </b>{{ questionario.consumoFrango }}</div>
-            <div *ngIf="questionario.consumoPeixe"><b>Consumo pexio: </b>{{ questionario.consumoPeixe }}</div>
+            <div *ngIf="questionario.consumoPeixe"><b>Consumo peixe: </b>{{ questionario.consumoPeixe }}</div>
         </div>
 
         <div class="mt-3"><b>Cadastrado em: </b>{{ questionario.dataHoraCadastroQuestionario }}</div>
