Criação dos componentes de cadastro dos históricos do paciente

--- a/src/app/paciente-historicos/historico-alimentar/fieldset-historico-alimentar/fieldset-historico-alimentar.component.html
+++ b/src/app/paciente-historicos/historico-alimentar/fieldset-historico-alimentar/fieldset-historico-alimentar.component.html
@@ -7,13 +7,9 @@
         </span>
     </p-header>
 
-    <div *ngIf="exibirBotaoCadastrarHistorico">
-        <button class="btn btn-success" style="width: 100%;" (click)="abrirDialogCadastro = true"
-            [disabled]="!exibirBotaoCadastrarHistorico || !informacoesParaCadastro">
-            <i class="fas fa-plus"></i>
-            Cadastrar histórico alimentar
-        </button>
-    </div>
+    <app-cadastrado-historico-alimentar [paciente]="paciente" [exibirBotaoCadastrarHistorico]="exibirBotaoCadastrarHistorico"
+        [informacoesParaCadastro]="informacoesParaCadastro" (cadastroHistorico)="cadastroHistoricoAlimentar($event)">
+    </app-cadastrado-historico-alimentar>
 
     <div class="borda-table mt-2">
         <p-table #dataView [value]="previaHistoricosAlimentares" [columns]="colunasTabelaPreviaHistoricos" [responsive]="true" 
@@ -277,196 +273,6 @@
         <button class="btn btn-success" [disabled]="processandoExclusao" 
             (click)="excluirHistoricoAlimentar()">
             <i class="fas " [ngClass]="processandoExclusao ? 'fa-spin fa-circle-notch' : 'fa-check-circle'"></i>
-            Confirmar
-        </button>
-    </p-footer>
-</p-dialog>
-
-<!-- Dialog cadastro de Histórico Alimentar -->
-<p-dialog [visible]="abrirDialogCadastro" [modal]="true" [resizable]="false" 
-    [blockScroll]="true" [draggable]="false" [closable]="false" [style]="{width: '96%'}">
-
-    <p-header>
-        Cadastrar histórico alimentar
-    </p-header>
-
-    <div class="container-fluid">
-        <div class="row mt-4">
-            <div class="col-12 col-md-6">
-                <span class="p-float-label">
-                    <textarea pInputTextarea [rows]="3" [(ngModel)]="formularioCadastro.intoleranciaAlergiaAlimentosPaciente" 
-                        [style]="{width: '90%'}">
-                    </textarea>
-                    <label for="inputtext">Intolerância/alergia a alimentos</label>
-                </span>
-            </div>
-            <div class="col-12 col-md-6">
-                <span class="p-float-label">
-                    <textarea pInputTextarea [rows]="3" [(ngModel)]="formularioCadastro.preferenciaAlimentarPaciente" 
-                        [style]="{width: '90%'}">
-                    </textarea>
-                    <label for="inputtext">Preferência alimentar</label>
-                </span>
-            </div>
-        </div>
-
-        <div class="row mt-4">
-            <div class="col-12 col-md-6">
-                <span class="p-float-label">
-                    <textarea pInputTextarea [rows]="3" [(ngModel)]="formularioCadastro.alimentosPacienteNaoGosta" 
-                        [style]="{width: '90%'}">
-                    </textarea>
-                    <label for="inputtext">Alimentos que não gosta</label>
-                </span>
-            </div>
-            <div class="col-12 col-md-6">
-                <span class="p-float-label">
-                    <textarea pInputTextarea [rows]="3" [(ngModel)]="formularioCadastro.alteracoesGastrointestinal" 
-                        [style]="{width: '90%'}">
-                    </textarea>
-                    <label for="inputtext">Alterações gastroitestinal</label>
-                </span>
-            </div>
-        </div>
-
-        <div class="row mt-4">
-            <div class="col-12 col-md-6">
-                <span class="p-float-label">
-                    <input type="text" style="width: 90%;" [(ngModel)]="formularioCadastro.consumoAgua" pInputText> 
-                    <label for="inputtext">Consumo de água</label>
-                </span>
-            </div>
-            <div class="col-12 col-md-6">
-                <div class="row">
-                    <div class="col-12 col-sm-6">
-                        <span class="p-float-label">
-                            <p-multiSelect [options]="medicamentosDropdown" [(ngModel)]="medicamentosSelecionadosDropdown" 
-                                optionLabel="label" appendTo="body" [filter]="true" emptyFilterMessage="Medicamento não encontrado!"
-                                (ngModelChange)="alteracaoMedicamentosSelecionadasParaCadastro()"
-                                [style]="{width: '100%'}" [scrollHeight]="'120px'" [displaySelectedLabel]="false">
-                            </p-multiSelect >
-                            <label for="inputtext">Medicamentos</label>
-                        </span>
-                    </div>
-                    <div class="col-12 col-sm-6 mt-1">
-                        <b>Medicamentos selecionados:</b> {{ nomesMedicamentosSelecionados }}
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row mt-4">
-            <button class="btn btn-info" style="width: 100%;"
-                (click)="abrirDialogSelecaoSuplementosPaciente = true">
-                <i class="fas fa-capsules"></i>
-                Suplementos
-            </button>
-        </div>
-    </div>
-
-    <p-footer>
-        <button class="btn btn-danger" (click)="resetarCampos()">
-            <i class="fas fa-arrow-circle-left"></i>
-            Voltar
-        </button>
-
-        <button class="btn btn-success" [disabled]="desabilitarBotaoConfirmarCadastroHistoricoAlimentar()"
-            (click)="cadastrarHistoricoAlimentar()">
-            <i class="fas " [ngClass]="processandoOperacao ? 'fa-spin fa-circle-notch' : 'fa-check-circle'"></i>
-            Confirmar
-        </button>
-    </p-footer>
-</p-dialog>
-
-<!-- Dialog cadastro de suplementos do paciente -->
-<p-dialog [visible]="abrirDialogSelecaoSuplementosPaciente" [modal]="true" [resizable]="false" 
-    [blockScroll]="true" [draggable]="false" [closable]="false" [style]="{width: '85%'}">
-
-    <p-header>
-        Cadastrar suplementos de <b>{{ paciente.nome }}</b>
-    </p-header>
-
-    <div class="container-fluid">
-        <div class="row mt-4">
-            <div class="col-12">
-                <span class="p-float-label">
-                    <p-multiSelect [options]="suplementosDropdown" [(ngModel)]="suplementosSelecionadosDropdown" optionLabel="label" 
-                        appendTo="body" [filter]="true" emptyFilterMessage="Suplemento não encontrado!"
-                        (ngModelChange)="alteracaoSuplementosSelecionadosParaCadastro()"
-                        [style]="{width: '100%'}" [scrollHeight]="'120px'" [displaySelectedLabel]="false">
-                    </p-multiSelect >
-                    <label for="inputtext">Suplementos</label>
-                </span>
-            </div>
-        </div>
-
-        <div class="row mt-3" [style]="!suplementosSelecionadosDropdown || suplementosSelecionadosDropdown.length < 2 ? 'margin-bottom: 150px' : ''">
-            <div class="borda-table">
-                <p-table [value]="formularioSuplementosSelecionados" [columns]="colunasTabelaCadastroSuplementosPaciente" 
-                    [responsive]="true" class="text-center">
-
-                    <ng-template pTemplate="header" let-colunas>
-                        <tr>
-                            <th *ngFor="let coluna of colunas" [pSortableColumn]="coluna.field" [ngClass]="coluna.style" class="text-center">
-                                {{ coluna.header }}
-                                <p-sortIcon *ngIf="coluna.header ==='Nome'" [field]="coluna.field" 
-                                    ariaLabel="active to sort"
-                                    ariaLabelDesc="Activate to sort in descending order"
-                                    ariaLabelAsc="Activate to sort in ascending order">
-                                </p-sortIcon>
-                            </th>
-                        </tr>
-                    </ng-template>
-
-                    <ng-template pTemplate="body" let-suplemento>
-                        <tr>
-                            <td *ngFor="let coluna of colunasTabelaCadastroSuplementosPaciente" class="text-center">
-                                <span class="ui-column-title text-left"></span>
-
-                                <span *ngIf="coluna.header === 'Nome'">
-                                    {{ suplemento[coluna.field] }}
-                                </span>
-
-                                <span *ngIf="coluna.header === 'Dose'">
-                                    <input type="text" style="width: 90%;" [(ngModel)]="formularioSuplementosSelecionados[formularioSuplementosSelecionados.indexOf(suplemento)].dose" pInputText> 
-                                </span>
-
-                                <span *ngIf="coluna.header === 'Forma de Preparo'">
-                                    <textarea pInputTextarea [rows]="3" [(ngModel)]="formularioSuplementosSelecionados[formularioSuplementosSelecionados.indexOf(suplemento)].formaPreparo" 
-                                        [style]="{width: '100%'}" autoResize="autoResize">
-                                    </textarea>
-                                </span>
-                
-                                <span *ngIf="coluna.header === 'Ações'">
-                                    <button class="btn btn-danger ml-2" pTooltip="Excluir" tooltipPosition="bottom"
-                                        (click)="excluirSuplementoDoPaciente(suplemento)">
-                                        <i class="fas fa-trash-alt"></i>
-                                    </button>
-                                </span>
-                            </td>
-                        </tr>
-                    </ng-template>
-
-                    <ng-template pTemplate="emptymessage" class="text-center" let-suplementos>
-                        <tr>
-                            <td [attr.colspan]="suplementos.length" class="text-center">
-                                Nenhum suplemento selecionado
-                            </td>
-                        </tr>
-                    </ng-template>
-                </p-table>
-            </div>
-        </div>
-    </div>
-
-    <p-footer>
-        <button class="btn btn-danger" (click)="cancelarSuplementosPaciente()">
-            <i class="fas fa-times-circle"></i>
-            Cancelar
-        </button>
-        <button class="btn btn-success" [disabled]="desabilitarBotaoConfirmarSuplementosSelecionadosDoPaciente()"
-            (click)="abrirDialogSelecaoSuplementosPaciente = false">
-            <i class="fas fa-check-circle"></i>
             Confirmar
         </button>
     </p-footer>
